Upgrade java version from 8 to 11
Signed-off-by: priyanka.akhade <priyanka.akhade@huawei.com>
Issue-ID: CLI-288
Change-Id: I2592b535cd808c0ed6f4269994b28a806aa09a9a